--- a/.github/workflows/04-build-and-deploy-to-production.yaml
+++ b/.github/workflows/04-build-and-deploy-to-production.yaml
@@ -64,45 +64,45 @@ jobs:
             ./src/Conclude-Install.ps1
             ./Manifest.psd1
 
-      # - name: Send release email notification
-      #   uses: betterfor/action-send-mail@main
-      #   with:
-      #     server_address: mail.realtimeevents.co
-      #     server_port: 465
-      #     username: ${{ vars.GMAIL_USER }}
-      #     password: ${{ vars.GMAIL_APP_PASSWORD }}
-      #     subject: 'New Release: ${{ github.repository }} ${{ github.ref_name }}'
-      #     to: rte-development@brightedge.co.za
-      #     from: Development Messenger
-      #     html_body: |
-      #       <table style="font-family: verdana;font-size:90%; border-collapse:collapse; border-style: double; border-color: 000000; border-width: 3px">
-      #         <colgroup>
-      #           <col style="text-align:right">
-      #           <col style="text-align:left">
-      #         </colgroup>
-      #         <tr>
-      #           <th style="text-align: center; border-bottom-style: double; border-right-style: double; border-right-width: 1px; border-bottom-width: 3px">Description</th>
-      #           <th style="text-align: center; border-bottom-style: double; border-left-style: double; border-bottom-width: 3px; border-left-width: 1px">Detail</th>
-      #         </tr>
-      #         <tr>
-      #           <td style="text-align: right; border-right-style: solid; border-bottom-style: dotted; border-right-width: 1px;border-bottom-width: 1px">Repository:</td>
-      #           <td style="text-align: left; border-bottom-style: dotted; border-left-style: solid; border-left-width: 1px;border-bottom-width: 1px">${{ github.repository }}</td>
-      #         </tr>
-      #         <tr>
-      #           <td style="text-align: right; border-right-style: solid; border-bottom-style: dotted; border-right-width: 1px;border-bottom-width: 1px">Release:</td>
-      #           <td style="text-align: left; border-bottom-style: dotted; border-left-style: solid; border-left-width: 1px;border-bottom-width: 1px">${{ github.ref_name }}</td>
-      #         </tr>
-      #         <tr>
-      #           <td style="text-align: right; border-right-style: solid; border-bottom-style: dotted; border-right-width: 1px;border-bottom-width: 1px">Actor:</td>
-      #           <td style="text-align: left; border-bottom-style: dotted; border-left-style: solid; border-left-width: 1px;border-bottom-width: 1px">${{ github.actor }}</td>
-      #         </tr>
-      #         <tr>
-      #           <td style="text-align: right; border-right-style: solid; border-bottom-style: dotted; border-right-width: 1px;border-bottom-width: 1px">Workflow:</td>
-      #           <td style="text-align: left; border-bottom-style: dotted; border-left-style: solid; border-left-width: 1px;border-bottom-width: 1px">${{ github.workflow }}</td>
-      #         </tr>
-      #         <tr>
-      #           <td style="text-align: right; border-right-style: solid; border-right-width: 1px">Release URL:</td>
-      #           <td style="text-align: left; border-left-style: solid; border-left-width: 1px"><a href="https://github.com/${{ github.repository }}/releases/tag/${{github.ref_name}}">Click here</a></td>
-      #         </tr>
-      #       </table><br>
-      #     priority: normal
+      - name: Send release email notification
+        uses: betterfor/action-send-mail@main
+        with:
+          server_address: mail.realtimeevents.co
+          server_port: 465
+          username: ${{ vars.GMAIL_USER }}
+          password: ${{ vars.GMAIL_APP_PASSWORD }}
+          subject: 'New Release: ${{ github.repository }} ${{ github.ref_name }}'
+          to: rte-development@brightedge.co.za
+          from: Development Messenger
+          html_body: |
+            <table style="font-family: verdana;font-size:90%; border-collapse:collapse; border-style: double; border-color: 000000; border-width: 3px">
+              <colgroup>
+                <col style="text-align:right">
+                <col style="text-align:left">
+              </colgroup>
+              <tr>
+                <th style="text-align: center; border-bottom-style: double; border-right-style: double; border-right-width: 1px; border-bottom-width: 3px">Description</th>
+                <th style="text-align: center; border-bottom-style: double; border-left-style: double; border-bottom-width: 3px; border-left-width: 1px">Detail</th>
+              </tr>
+              <tr>
+                <td style="text-align: right; border-right-style: solid; border-bottom-style: dotted; border-right-width: 1px;border-bottom-width: 1px">Repository:</td>
+                <td style="text-align: left; border-bottom-style: dotted; border-left-style: solid; border-left-width: 1px;border-bottom-width: 1px">${{ github.repository }}</td>
+              </tr>
+              <tr>
+                <td style="text-align: right; border-right-style: solid; border-bottom-style: dotted; border-right-width: 1px;border-bottom-width: 1px">Release:</td>
+                <td style="text-align: left; border-bottom-style: dotted; border-left-style: solid; border-left-width: 1px;border-bottom-width: 1px">${{ github.ref_name }}</td>
+              </tr>
+              <tr>
+                <td style="text-align: right; border-right-style: solid; border-bottom-style: dotted; border-right-width: 1px;border-bottom-width: 1px">Actor:</td>
+                <td style="text-align: left; border-bottom-style: dotted; border-left-style: solid; border-left-width: 1px;border-bottom-width: 1px">${{ github.actor }}</td>
+              </tr>
+              <tr>
+                <td style="text-align: right; border-right-style: solid; border-bottom-style: dotted; border-right-width: 1px;border-bottom-width: 1px">Workflow:</td>
+                <td style="text-align: left; border-bottom-style: dotted; border-left-style: solid; border-left-width: 1px;border-bottom-width: 1px">${{ github.workflow }}</td>
+              </tr>
+              <tr>
+                <td style="text-align: right; border-right-style: solid; border-right-width: 1px">Release URL:</td>
+                <td style="text-align: left; border-left-style: solid; border-left-width: 1px"><a href="https://github.com/${{ github.repository }}/releases/tag/${{github.ref_name}}">Click here</a></td>
+              </tr>
+            </table><br>
+          priority: normal
