Resolve workflow: Send release email notification

--- a/.github/workflows/04-build-and-deploy-to-production.yaml
+++ b/.github/workflows/04-build-and-deploy-to-production.yaml
@@ -21,6 +21,8 @@ jobs:
 
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GMAIL_USER: ${{ secrets.GMAIL_USER }}
+      GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
 
     steps:
       - name: Check out repository
@@ -69,40 +71,51 @@ jobs:
         with:
           server_address: mail.realtimeevents.co
           server_port: 465
-          username: ${{ vars.GMAIL_USER }}
-          password: ${{ vars.GMAIL_APP_PASSWORD }}
+          username: ${{ secrets.GMAIL_USER }}
+          password: ${{ secrets.GMAIL_APP_PASSWORD }}
           subject: 'New Release: ${{ github.repository }} ${{ github.ref_name }}'
           to: rte-development@brightedge.co.za
-          from: Development Messenger
-          html_body: |
-            <table style="font-family: verdana;font-size:90%; border-collapse:collapse; border-style: double; border-color: 000000; border-width: 3px">
-              <colgroup>
-                <col style="text-align:right">
-                <col style="text-align:left">
-              </colgroup>
-              <tr>
-                <th style="text-align: center; border-bottom-style: double; border-right-style: double; border-right-width: 1px; border-bottom-width: 3px">Description</th>
-                <th style="text-align: center; border-bottom-style: double; border-left-style: double; border-bottom-width: 3px; border-left-width: 1px">Detail</th>
-              </tr>
-              <tr>
-                <td style="text-align: right; border-right-style: solid; border-bottom-style: dotted; border-right-width: 1px;border-bottom-width: 1px">Repository:</td>
-                <td style="text-align: left; border-bottom-style: dotted; border-left-style: solid; border-left-width: 1px;border-bottom-width: 1px">${{ github.repository }}</td>
-              </tr>
-              <tr>
-                <td style="text-align: right; border-right-style: solid; border-bottom-style: dotted; border-right-width: 1px;border-bottom-width: 1px">Release:</td>
-                <td style="text-align: left; border-bottom-style: dotted; border-left-style: solid; border-left-width: 1px;border-bottom-width: 1px">${{ github.ref_name }}</td>
-              </tr>
-              <tr>
-                <td style="text-align: right; border-right-style: solid; border-bottom-style: dotted; border-right-width: 1px;border-bottom-width: 1px">Actor:</td>
-                <td style="text-align: left; border-bottom-style: dotted; border-left-style: solid; border-left-width: 1px;border-bottom-width: 1px">${{ github.actor }}</td>
-              </tr>
-              <tr>
-                <td style="text-align: right; border-right-style: solid; border-bottom-style: dotted; border-right-width: 1px;border-bottom-width: 1px">Workflow:</td>
-                <td style="text-align: left; border-bottom-style: dotted; border-left-style: solid; border-left-width: 1px;border-bottom-width: 1px">${{ github.workflow }}</td>
-              </tr>
-              <tr>
-                <td style="text-align: right; border-right-style: solid; border-right-width: 1px">Release URL:</td>
-                <td style="text-align: left; border-left-style: solid; border-left-width: 1px"><a href="https://github.com/${{ github.repository }}/releases/tag/${{github.ref_name}}">Click here</a></td>
-              </tr>
-            </table><br>
+          from: Development Messenger>
+          # body: Build job of ${{github.repository}} completed successfully!
+          html_body: '		<table style="font-family: verdana;font-size:90%; border-collapse:collapse; border-style: double; border-color: 000000; border-width: 3px">
+            <colgroup>
+              <col style="text-align:right">
+              <col style="text-align:left">
+            </colgroup>
+            <tr>
+              <th style="text-align: center; border-bottom-style: double; border-right-style: double; border-right-width: 1px; border-bottom-width: 3px">Description</th>
+              <th style="text-align: center; border-bottom-style: double; border-left-style: double; border-bottom-width: 3px; border-left-width: 1px">Detail</th>
+            </tr>
+            <tr>
+              <td style="text-align: right; border-right-style: solid; border-bottom-style: dotted; border-right-width: 1px;border-bottom-width: 1px">Repository:</td>
+              <td style="text-align: left; border-bottom-style: dotted; border-left-style: solid; border-left-width: 1px;border-bottom-width: 1px">${{ github.repository }}</td>
+            </tr>
+            <tr>
+              <td style="text-align: right; border-right-style: solid; border-bottom-style: dotted; border-right-width: 1px;border-bottom-width: 1px">Release:</td>
+              <td style="text-align: left; border-bottom-style: dotted; border-left-style: solid; border-left-width: 1px;border-bottom-width: 1px">${{ github.ref_name }}</td>
+            </tr>
+            <tr>
+              <td style="text-align: right; border-right-style: solid; border-bottom-style: dotted; border-right-width: 1px;border-bottom-width: 1px">Actor:</td>
+              <td style="text-align: left; border-bottom-style: dotted; border-left-style: solid; border-left-width: 1px;border-bottom-width: 1px">${{ github.actor }}</td>
+            </tr>
+            <tr>
+              <td style="text-align: right; border-right-style: solid; border-bottom-style: dotted; border-right-width: 1px;border-bottom-width: 1px">Workflow:</td>
+              <td style="text-align: left; border-bottom-style: dotted; border-left-style: solid; border-left-width: 1px;border-bottom-width: 1px">${{ github.workflow }}</td>
+            </tr>
+            <tr>
+              <td style="text-align: right; border-right-style: solid; border-right-width: 1px">Release URL:</td>
+              <td style="text-align: left; border-left-style: solid; border-left-width: 1px"><a href="https://github.com/${{ github.repository }}/releases/tag/${{github.ref_name}}">Click here</a></td>
+            </tr>
+          </table><br>'
+          # cc: a@example.com,b@example.com
+          # bcc: c@example.com,d@example.com
+          # Optional recipient of the email response
+          # reply_to: luke@example.com
+          # Optional Message ID this message is replying to
+          # in_reply_to: <random-luke@example.com>
+          # Optional converting Markdown to HTML (set content_type to text/html too)
+          # convert_markdown: true
+          # Optional attachments
+          # attachments: README.md
+          # Optional priority: 'high', 'normal' (default) or 'low'
           priority: normal
