--- a/.github/workflows/04-build-and-deploy-to-production.yaml
+++ b/.github/workflows/04-build-and-deploy-to-production.yaml
@@ -21,8 +21,8 @@ jobs:
 
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      GMAIL_USER: ${{ secrets.GMAIL_USER }}
-      GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
+      # GMAIL_USER: ${{ secrets.GMAIL_USER }}
+      # GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
 
     steps:
       - name: Check out repository
