--- a/.github/workflows/04-build-and-deploy-to-production.yaml
+++ b/.github/workflows/04-build-and-deploy-to-production.yaml
@@ -75,8 +75,8 @@ jobs:
           server_port: 465
           # username: ${{ secrets.GMAIL_USER }}
           # password: ${{ secrets.GMAIL_APP_PASSWORD }}
-          username: ${{ RELEASE_EMAIL_USER }}
-          password: ${{ RELEASE_EMAIL_PASSWORD }}
+          username: ${{ env.RELEASE_EMAIL_USER }}
+          password: ${{ env.RELEASE_EMAIL_PASSWORD }}
           subject: 'New Release: ${{ github.repository }} ${{ github.ref_name }}'
           to: rte-development@brightedge.co.za
           from: Development Messenger
