--- a/.github/workflows/03-ci.yaml
+++ b/.github/workflows/03-ci.yaml
@@ -24,12 +24,12 @@ jobs:
       run: Install-Module -Name Pester -Force -Scope CurrentUser
 
     - name: Run and Create Pester Report
-      id: test_module
+      id: pester_tests
       uses: zyborg/pester-tests-report@v1
       with:
         include_paths: tests
-        report_name: venvit_pester_tests
-        report_title: VenvIt Pester Tests
+        report_name: venvit_pester_test_report
+        report_title: VenvIt Pester Test Report
         github_token: ${{ secrets.GITHUB_TOKEN }}
         coverage_paths: tests,src
         coverage_report_name: venvit_code_coverage_report
@@ -39,10 +39,10 @@ jobs:
     - name: Dump Pester Test Results
       shell: pwsh
       run: |
-        Write-Host 'Total Tests Executed...:  ${{ steps.test_module.outputs.total_count }}'
-        Write-Host 'Total Tests PASSED.....:  ${{ steps.test_module.outputs.passed_count }}'
-        Write-Host 'Total Tests FAILED.....:  ${{ steps.test_module.outputs.failed_count }}'
-        if (${{ steps.test_module.outputs.failed_count }} -gt 0) {
+        Write-Host 'Total Tests Executed...:  ${{ steps.pester_tests.outputs.total_count }}'
+        Write-Host 'Total Tests PASSED.....:  ${{ steps.pester_tests.outputs.passed_count }}'
+        Write-Host 'Total Tests FAILED.....:  ${{ steps.pester_tests.outputs.failed_count }}'
+        if (${{ steps.pester_tests.outputs.failed_count }} -gt 0) {
           throw "There are failing tests!"
         }
 
@@ -51,5 +51,5 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: code-coverage-report
-        path: ${{ steps.test_module.outputs.coverage_results_path }}
+        path: ${{ steps.pester_tests.outputs.coverage_results_path }}
 
